--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ashwaq Salim E-Portfolio</title>
-    <link rel="stylesheet" href="AS.css">
+    <link rel="stylesheet" href="https://ashwaq60.github.io/">
     <script>main.jss</script>
 </head>
 <body>
